sec_context.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-user-pod
spec:
  securityContext:
    runAsUser: 1001
  containers:
  -  image: ubuntu
     name: web
     command: ["sleep", "5000"]
     securityContext:
      runAsUser: 1002
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
  -  image: ubuntu
     name: sidecar
     command: ["sleep", "5000"]
