hpa.yml
apiVersion: v1
kind: Namespace
metadata: 
  name: metallb-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metallb-deploy01
  namespace: metallb-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metallb-app01
  template:
    metadata:
      labels:
        app: metallb-app01
    spec:
      containers:
      - name: nginx-metallb-cont01
        image: nginx:latest
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
        resources:
          requests:
           cpu: 200m
           memory: 128Mi
          limits:
           cpu: 300m
           memory: 192Mi

---

apiVersion: v1
kind: Service
metadata:
  name: metallb-test-svc
  namespace: metallb-test
spec:
  selector:
    app: metallb-app01
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
