nginx_deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bazcorp


---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deploy
 namespace: bazcorp
 labels:
  app: front-nginx01-deploy
 annotations:
  buildversion: 1.0.1

spec:
 template:
  metadata:
   name: nginx01-pod
   labels:
    app: nginx01-front-pod
  spec:
   containers:
   - name: nginx01-cont
     image: bazdoc/nginx01-bazcorp:v2
     ports:
     - name: http
       containerPort: 80
       protocol: TCP
     resources:
      requests:
        cpu: "200m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "512Mi"
     volumeMounts:
      - mountPath: /var/logs
        name: log-volume

   volumes:
    - name: log-volume
      persistentVolumeClaim:
        claimName: pvc-local

   affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
              - key: size
                operator: In
                values:
                - large
 replicas: 3
 selector:
  matchLabels:
   app: nginx01-front-pod

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-front-nodeport
  namespace: bazcorp
spec:
  type: NodePort
  selector:
    app: nginx01-front-pod
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
    nodePort: 31666
