nginx_svc.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx01-nodeport
spec:
 type: NodePort
 ports:
  - targetPort: 80
    port: 80
    nodePort: 30010
 selector:
  app: nginx01-front-pod
