service-balance.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-balance
  labels:
    env: prod
    owner: baz
spec:
  selector:
   project: bazprod
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
    type: LoadBalancer
