nginx_gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gate01-svc
  namespace: bazcorp
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: http
    allowedRoutes:
      namespaces:
        from: All
