tls_secret.yml
apiVersion: v1
kind: Namespace
metadata:
  name: secret-tls

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-tls-deploy
  namespace: secret-tls
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secret-tls-pod
  template:
    metadata:
      labels:
        app: secret-tls-pod
    spec:
      containers:
        - name: secret-tls-cont
          image: bazdoc/go-playground:1.13
          ports:
            - name: web-port
              protocol: TCP
              containerPort: 8000
              

---

apiVersion: v1
kind: Service
metadata:
  name: secret-tls-service
  namespace: secret-tls
spec:
  type: LoadBalancer
  selector:
    app: secret-tls-pod
  ports:
    - name: web-port-service
      port: 8080
      targetPort: 8000


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-tls-ingress
  namespace: secret-tls
spec:
  ingressClassName: nginx
  rules:
    - host: tls.bazcorp.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: secret-tls-service
              port:
                number: 8000
  tls:
    - hosts:
        - tls.bazcorp.com              
      secretName: tls-secret
